- Added support for asymmetric routing (https://issues.redhat.com/browse/JGRP-1506) - Changed logic in Relayer to add/remove routes to/from the routing table; this works for both symmetric and asymmetric routing - Added history of visited sites to prevent cycles (https://issues.redhat.com/browse/JGRP-1519) - Using the correct sender when relaying messages to other sites (sender's site was incorrect) - Implemented forwardind of messages to sites via ForwardingRoutes